# cdp-kahin-mcp

./: .gitignore  .mcp.json  AGENTS.md  OPTIMIZATIONS.md  README.md  pyproject.toml
.opencode/opencode-loop/: ses_19c106160ffeLF838ojE9xxJ7R.json
kahin/: __init__.py  _chrome.py  _healer.py  _state.py  oracle.py
kahin/residual_self/: fate.py
kahin/the_keymaker/: grimoire.py  pilot.py  seraph.py
kahin/the_source/: architect.py
kahin/the_twins/: chassis.py  mirage.py  shadow.py
scripts/: visions.py
tests/: conftest.py  test_architect.py  test_e2e.py  test_fate.py  test_oracle.py  test_oracle_phase3.py
